--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -27,17 +27,13 @@ class Dictionary<K,V> {
     ...
 }
 ```
-所以 Hashtable 一般是不被推荐使用的。
+所以 **Hashtable 一般是不被推荐使用的。**
 在jdk1.5开始提供了多种并发容器用来改进同步容器的性能，比如用于替代 Hashtable 的同步容器 ConcurrentHashMap。
 ConcurrentHashMap 是严格来说是线程安全版本的HashMap。
 ConcurrentHashMap 被用来替代 Hashtable 肯定是解决了 Hashtable 的一些弊端，比如性能低下，主要体现在 synchronized 和底层的存储结构数组加链表，对于 Hashtable 而言，每一次对集合的操作都是串行的，它是会锁住整个 hash 表。
-JDK1.7中的 ConcurrentHashMap 采用一种更加细粒度的“分段锁”加锁机制，将整张表分成了多个数组（Segment），然后每个数组元素又是一个HashMap（hash表），加锁级别只在segment段上，segment继承了乐观锁ReentrantLock，这就意味着不同的segment段是不会锁冲突的，大大提升了并发性能。
+JDK1.7中的 ConcurrentHashMap 采用一种更加细粒度的 **“分段锁”** 加锁机制，将整张表分成了多个数组（Segment段），然后每个数组元素又是一个HashMap（hash表），加锁级别只在segment段上，segment继承了乐观锁ReentrantLock，这就意味着不同的segment段是不会锁冲突的，大大提升了并发性能。
 当然了这种方式也有问题，缺点在于分成很多段时会比较浪费内存空间(不连续，碎片化); 操作 Map 时竞争同一个分段锁的概率非常小时，分段锁反而会造成更新等操作的长时间等待; 当某个段很大时，分段锁的性能会下降。
-JDK1.8的实现已经摒弃了Segment的概念，或者说弱化了Segment，而是直接用Node数组+链表+红黑树的数据结构来实现，并发控制使用Synchronized和CAS来操作，这里也会涉及到Synchronized锁的优化，这个在另一个专题会详细讲解。
-
-
-
-
+JDK1.8的实现已经摒弃了Segment的概念，或者说弱化了Segment，而是直接用Node数组+链表+红黑树的数据结构来实现，并发控制使用Synchronized和CAS来操作，这里也涉及到关于Synchronized锁的优化，这个在另一个专题会详细讲解。
 
 为什么不用ReentrantLock而用synchronized ?
 减少内存开销:如果使用ReentrantLock则需要节点继承AQS来获得同步支持，增加内存开销，而1.8中只有头节点需要进行同步。
