--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -3,13 +3,18 @@
 作者：小路哥
 <br/>博客：[https://bugstack.cn](https://bugstack.cn)
 
+> 故不积跬步，无以至千里；不积小流，无以成江海！🌻
+
 ## 一、概述
 Map是一种键-值对（key-value）集合，Map集合中的每一个元素都包含一个键对象和一个值对象。
 Map接口规定了这类集合的基本雏形，也就是约定了向集合放入元素，从集合取元素，获取集合大小等待一系列方法，以及约定了key-value结构的
 元素的接口Entry<K,V>，它的实现类必须实现此接口。
 Map接口的实现主要有两类：HashMap类和TreeMap类。其中，HashMap类按哈希算法来存取键对象，而TreeMap类可以对键对象进行排序。
 
-## 二、Hashtable类
+## 二、HashMap类
+
+
+## 三、Hashtable类
 
 在Java发展的早期就在支持多线程了，所以也提供了一些线程安全的容器，比如在最早jdk1.2提供的集合容器类比如Vector、Hashtable，他们的实现机制都差不多，都是在方法层面上加synchronized关键字来实现线程安全。这种线程安全是以降低性能为代价的，时至今日Hashtable它的抽象父类Dictionary 已被提示为弃用
 
@@ -26,7 +31,7 @@ class Dictionary<K,V> {
 
 所以 **Hashtable 一般是不被推荐使用的。**
 
-## 三、ConcurrentHashMap 类
+## 四、ConcurrentHashMap类
 
 从jdk1.5开始提供了多种并发容器用来改进同步容器的性能，比如用于替代 Hashtable 的同步容器的ConcurrentHashMap。
 ConcurrentHashMap 严格来说是线程安全版本的HashMap，被用来替代 Hashtable ，它的出现解决了 Hashtable 的一些弊端，比如性能低下，这方面主要体现在 Hashtable 的线程安全是基于 synchronized 关键字，早期的 synchronized 锁属于重量级锁，所以对于 Hashtable 而言，每一次对集合的操作都是串行的，它是会锁住整个 hash 表。
@@ -38,6 +43,12 @@ JDK1.8的实现已经摒弃了Segment的概念，或者说弱化了Segment，而
 >- 减少内存开销：如果使用ReentrantLock则需要节点继承AQS来获得同步支持，增加内存开销，而1.8中只有头节点需要进行同步。
 >- 内部优化：synchronized则是JVM直接支持的，JVM能够在运行时作出相应的优化措施：锁粗化、锁消除、锁自旋等等。
 
+**ConcurrentHashMap从JDK1.7到JDK1.8的区别汇总：**
+- JDK1.8中新增了红黑树，提高了查询效率
+- JDK1.7中使用的是头插法，JDK1.8中使用的是尾插法
+- JDK1.7中使用了分段锁，而JDK1.8中没有使用分段锁了
+- JDK1.7中使用了ReentrantLock，JDK1.8中没有使用ReentrantLock了，而使用了Synchronized
+- JDK1.7中的扩容是每个Segment内部进行扩容，不会影响其他Segment，而JDK1.8中的扩容和HashMap的扩容类似，只不过支持了多线程扩容，并且保证了线程安全
 
 
 
@@ -46,10 +57,8 @@ JDK1.8的实现已经摒弃了Segment的概念，或者说弱化了Segment，而
 
 
 
+## 五、TreeMap类
 
-## 三、TreeMap类
-
-### 1. 非线程安全类
 
 
 
