--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -122,10 +122,10 @@ hashMap的put源码：
     * 替换给定哈希表的索引处的所有链表的节点，哈希表太小的情况下，会进行扩容。
     */
     final void treeifyBin(Node<K, V>[] tab, int hash) {
-        // 定义n:节点数组长度、index:hash对应的数组下标、e:用于循环的迭代变量,代表当前节点
+        // 定义n:节点数组长度、index:散列表数组对应的数组下标、e:用于循环的迭代变量,代表当前节点
         int n, index;
         Node<K, V> e;
-        // 若数组尚未初始化或者数组长度小于64,则直接扩容而不进行树形化
+        // 若散列表数组尚未初始化或者数组长度小于64,则直接扩容而不进行树形化
         if (tab == null || (n = tab.length) < MIN_TREEIFY_CAPACITY)
             resize();
         else if ((e = tab[index = (n - 1) & hash]) != null) {// 获取指定数组下标的头结点e
@@ -147,7 +147,7 @@ hashMap的put源码：
                 }
                 // 将tl指向当前节点
                 tl = p;
-            } while ((e = e.next) != null);// e指向e的后继元
+            } while ((e = e.next) != null);// e指向e的后继元素
             // 若指定的位置头结点不为空则进行树形化
             if ((tab[index] = hd) != null)
                 // 根据链表创建红黑树结构
