HashMap的put方法流程图

--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -38,7 +38,7 @@ HashMap默认的负载因子是0.75
 ### 2.2 放入元素
 
 hashMap的put方法流程图：hashMap的put方法
-![HashMap的put方法](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法)
+![HashMap的put方法流程图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法流程图.png)
 
 hashMap的put源码：
 
