--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -37,9 +37,6 @@ HashMap默认的负载因子是0.75
 
 ### 2.2 放入元素
 
-hashMap的put方法流程图：hashMap的put方法
-![HashMap的put方法流程图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法流程图.png)
-
 hashMap的put源码：
 
 ```java
@@ -156,6 +153,10 @@ hashMap的put源码：
     }
 
 ```
+
+hashMap的put方法流程图：
+![HashMap的put方法流程图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法流程图.png)
+
 
 若hash桶中链表元素超过8，桶的长度会自动转化成红黑树
 之所以是8，是因为Java的源码贡献者在进行大量实验发现，hash碰撞发生8次的概率已经降低到了0.00000006，几乎为不可能事件，如果真的碰撞发生了8次，那么这个时候说明由于元素本身和hash函数的原因，此次操作的hash碰撞的可能性非常大了，后序可能还会继续发生hash碰撞。所以，这个时候，就应该将链表转换为红黑树了，也就是为什么链表转红黑树的阈值是8。 最后，红黑树转链表的阈值为6，主要是因为，如果也将该阈值设置于8，那么当hash碰撞在8时，会反生链表和红黑树的不停相互激荡转换，白白浪费资源。
