--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -32,7 +32,9 @@ HashMap结构图：
 什么是负载因子（ loadFactor ）？
 我们知道，第一次创建 HashMap 的时候，可以指定其容量（1.7默认容量为16，1.8默认容量为0），那随着我们不断的向 HashMap 
 中 put 元素的时候，就有可能会超过其容量，那么就需要有一个扩容机制。如果元素个数（size）超过临界值（threshold）的时候，就会进行自动扩容（resize），并且，在扩容之后，还需要对 HashMap 中原有元素进行 rehash，即将原来桶中的元素重新分配到新的桶中。
+
 **临界值（ threshold ） = 负载因子（ loadFactor ） * 容量（ capacity ）**
+
 HashMap默认的负载因子是0.75
 
 ### 2.2 放入元素
@@ -40,16 +42,6 @@ HashMap默认的负载因子是0.75
 hashMap的put源码：
 
 ```java
-    /**
-     * Implements Map.put and related methods.
-     *
-     * @param hash hash for key
-     * @param key the key 
-     * @param value the value to put
-     * @param onlyIfAbsent if true, don't change existing value
-     * @param evict if false, the table is in creation mode.
-     * @return previous value, or null if none
-     */
     final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
                    boolean evict) {
         // p：表示当前散列表的元素，n：散列表数组的长度，i：寻址的结果
@@ -157,9 +149,11 @@ hashMap的put源码：
 hashMap的put方法流程图：
 ![HashMap的put方法流程图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法流程图.png)
 
-
-若hash桶中链表元素超过8，桶的长度会自动转化成红黑树
-之所以是8，是因为Java的源码贡献者在进行大量实验发现，hash碰撞发生8次的概率已经降低到了0.00000006，几乎为不可能事件，如果真的碰撞发生了8次，那么这个时候说明由于元素本身和hash函数的原因，此次操作的hash碰撞的可能性非常大了，后序可能还会继续发生hash碰撞。所以，这个时候，就应该将链表转换为红黑树了，也就是为什么链表转红黑树的阈值是8。 最后，红黑树转链表的阈值为6，主要是因为，如果也将该阈值设置于8，那么当hash碰撞在8时，会反生链表和红黑树的不停相互激荡转换，白白浪费资源。
+若hash桶中链表元素超过8，散列表数组的长度会自动转化成红黑树
+之所以是8，是因为Java的源码贡献者在进行大量实验发现，hash碰撞发生8次的概率已经降低到了0.00000006，几乎为不可能事件，
+如果真的碰撞发生了8次，那么这个时候说明由于元素本身和hash函数的原因，此次操作的hash碰撞的可能性非常大了，
+后序可能还会继续发生hash碰撞。所以，这个时候，就应该将链表转换为红黑树了，也就是为什么链表转红黑树的阈值是8。 
+最后，红黑树转链表的阈值为6，主要是因为，如果也将该阈值设置于8，那么当hash碰撞在8时，会反生链表和红黑树的不停相互激荡转换，白白浪费资源。
 
 ### 2.2 扩容
 
