图片的修改，内容的补充

--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -33,7 +33,7 @@ HashMap结构图：
 我们知道，第一次创建 HashMap 的时候，可以指定其容量（1.7默认容量为16，1.8默认容量为0），那随着我们不断的向 HashMap 
 中 put 元素的时候，就有可能会超过其容量，那么就需要有一个扩容机制。如果元素个数（size）超过临界值（threshold）的时候，就会进行自动扩容（resize），并且，在扩容之后，还需要对 HashMap 中原有元素进行 rehash，即将原来桶中的元素重新分配到新的桶中。
 
-**临界值（ threshold ） = 负载因子（ loadFactor ） * 容量（ capacity ）**
+**扩容阈值（ threshold ） = 负载因子（ loadFactor ） * 容量（ capacity ）**
 
 HashMap默认的负载因子是0.75
 
@@ -157,23 +157,88 @@ hashMap的put方法流程图：
 
 ### 2.2 扩容
 
-一般情况下，当元素数量超过阈值时便会触发扩容。每次扩容的容量都是之前容量的 2 倍，HashMap 的容量是有上限的，必须小于 1<<30，即 1073741824。如果容量超出了这个范围，则阈值会被设置为 Integer.MAX_VALUE。
+```java 
+
+final Node<K,V>[] resize()
+
+```
+一般的扩容场景：
+1. 将一个Map集合B放入当前的集合A中，如果B集合不为空，且B集合的容量大于扩容阈值（threshold），会发生扩容
+2. 向集合中添加元素时，如果集合的容量在添加后大于扩容阈值（threshold），会发生扩容
+3. 链表树化过程中，如果散列表数组的长度不足64，则用扩容代替了树化
+
+每次扩容的容量都是之前容量的 2 倍，HashMap 的容量是有上限的，必须小于 1<<30，即 1073741824。如果容量超出了这个范围，则阈值会被设置为 Integer.MAX_VALUE。
 
 扩容机制：
 
 - 空参数的构造函数：实例化的 HashMap 默认内部数组是 null，即没有实例化。第一次调用 put 方法时，则会开始第一次初始化扩容，长度为 16。 
-- 有参构造函数：用于指定容量。会根据指定的正整数找到不小于指定容量的 2 的幂数， 将这个数设置赋值给阈值（threshold）。第一次调用 put 方法时，会将阈值赋值给容量， 然后让阈值 = 容量 x 负载因子。 
+- 有参构造函数：用于指定容量。会根据指定的正整数找到不小于指定容量的 2 的幂数， 将这个数设置赋值给扩容阈值（threshold）。第一次调用 put 方法时，会将阈值赋值给容量， 然后让阈值 = 容量 x 负载因子。 
 - 如果不是第一次扩容，则容量变为原来的 2 倍，阈值也变为原来的 2 倍。（容量和阈值 都变为原来的 2 倍时，负载因子还是不变）。 
 - 此外还有几个细节需要注意：
     - 首次 put 时，先会触发扩容（算是初始化），然后存入数据，然后判断是否需要扩容； 
     - 不是首次 put，则不再初始化，直接存入数据，然后判断是否需要扩容；
 
-多线程的问题
+**多线程下的问题**
+众所周知，在JDK1.7的时候，HashMap在多线程使用的场景下，扩容时会发生死锁问题，在JDK1.8的时候修复了该问题，
+但是！事情并没有结束，如果你在JDK1.8继续在多线程情况下使用它，还是有死锁问题：
+
+示例代码：
+```java
+
+public class TestHashMapDeadLock {
+
+    public static void main(String[] args) {
+        HashMapThread hmt0 = new HashMapThread();
+        HashMapThread hmt1 = new HashMapThread();
+        HashMapThread hmt2 = new HashMapThread();
+        HashMapThread hmt3 = new HashMapThread();
+        HashMapThread hmt4 = new HashMapThread();
+        HashMapThread hmt5 = new HashMapThread();
+        HashMapThread hmt6 = new HashMapThread();
+        HashMapThread hmt7 = new HashMapThread();
+        HashMapThread hmt8 = new HashMapThread();
+        HashMapThread hmt9 = new HashMapThread();
+        HashMapThread hmt10 = new HashMapThread();
+        HashMapThread hmt11 = new HashMapThread();
+        HashMapThread hmt12 = new HashMapThread();
+        hmt0.start();
+        hmt1.start();
+        hmt2.start();
+        hmt3.start();
+        hmt4.start();
+        hmt5.start();
+        hmt6.start();
+        hmt7.start();
+        hmt8.start();
+        hmt9.start();
+        hmt10.start();
+        hmt11.start();
+        hmt12.start();
+    }
+}
+
+class HashMapThread extends Thread {
+    private static AtomicInteger ai = new AtomicInteger(0);
+    private static Map<Integer, Integer> map = new HashMap<>(1);
+
+    @Override
+    public void run() {
+        while (ai.get() < 100000) {
+            map.put(ai.get(), ai.get());
+            ai.incrementAndGet();
+        }
+        System.out.println(Thread.currentThread().getName() + "执行结束完");
+    }
+}
+
+```
+总结一下：
+**多线程情况下，不要使用HashMap！请使用线程安全类：ConcurrentHashMap！**
 
 >**小贴士：**
 **在扩容的时候，会对长度小于6的红黑树进行链表的转换。**
 
-### 2.3 散列表的实现
+### 2.3 散列表数组的实现
 
 ### 2.4 扰动函数
 
@@ -188,9 +253,6 @@ HashMap 源码：
         return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
     }
 ```
-
->问题：
-多线程环境下，使用 HashMap 进行put操作会引起死循环，导致CPU利用率接近100%，所以在并发情况下不能使用 HashMap
 
 ## 三、Hashtable类
 
