--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -238,12 +238,19 @@ class HashMapThread extends Thread {
 >**小贴士：**
 **在扩容的时候，会对长度小于6的红黑树进行链表的转换。**
 
-### 2.3 散列表数组的实现
+### 2.3 散列表的实现
+#### 2.3.1 散列表
 
-### 2.4 扰动函数
+散列表的英文叫“Hash Table”，我们平时也叫它“哈希表”或者“Hash表"
+散列表用的是数组支持按照下标随机访问数据的特性，所以散列表其实就是数组的一种扩展，由数组演化而来。
+可以说，如果没有数组，就没有散列表。
+最好情况下，不需要扩容，时间复杂度是 O(1)，每次获取元素不需要遍历链表
+比较坏的情况是大量元素聚集在少量的链表中，每次的查询都需要遍历整个链表，时间复杂度是 O(n)
+
+#### 2.3.2 扰动函数
 
 **为什么要用扰动函数？**
-- 扰动函数是为了解决集合key的hash碰撞问题
+- 扰动函数是为了解决集合key的hash碰撞问题,尽可能地让元素均匀分布在散列表当中
 
 HashMap 源码：
 ```java
@@ -272,12 +279,16 @@ class Dictionary<K,V> {
 所以 **Hashtable 一般是不被推荐使用的。**
 
 ## 四、ConcurrentHashMap类
+### 4.1、概述
 
 从JDK1.5开始提供了多种并发容器用来改进同步容器的性能，比如用于替代 Hashtable 的同步容器的ConcurrentHashMap。
 ConcurrentHashMap 严格来说是线程安全版本的 HashMap，被用来替代 Hashtable ，它的出现解决了 Hashtable 的一些弊端，比如性能低下，这方面主要体现在 Hashtable 的线程安全是基于 synchronized 关键字，早期的 synchronized 锁属于重量级锁，所以对于 Hashtable 而言，每一次对集合的操作都是串行的，它是会锁住整个 hash 表。
 JDK1.7中的 ConcurrentHashMap 采用一种更加细粒度的 **“分段锁”** 加锁机制，将整张表分成了多个数组（Segment段），然后每个数组元素又是一个HashMap（hash表），加锁级别只在 Segment 段上，Segment继承了乐观锁ReentrantLock，这就意味着不同的 Segment 段是不会锁冲突的，大大提升了并发性能。
 当然了这种方式也有问题，缺点在于分成很多段时会比较浪费内存空间(不连续，碎片化); 操作 Map 时竞争同一个分段锁的概率非常小时，分段锁反而会造成更新等操作的长时间等待; 当某个段很大时，分段锁的性能会下降。
 JDK1.8的实现已经摒弃了 Segment 的概念，或者说弱化了 Segment，而是直接用Node数组+链表+红黑树的数据结构来实现，并发控制使用Synchronized 和CAS来操作，这里也涉及到关于 Synchronized 锁的优化，这个在另一个专题会详细讲解。
+
+### 4.2、与HashMap的区别是什么？
+ConcurrentHashMap是HashMap的升级版，HashMap是线程不安全的，而ConcurrentHashMap是线程安全。而其他功能和实现原理和HashMap类似
 
 >**小贴士：为什么不用ReentrantLock而用 synchronized ?** 
 >- 减少内存开销：如果使用ReentrantLock则需要节点继承AQS来获得同步支持，增加内存开销，而JDK1.8中只有头节点需要进行同步。
