--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -302,7 +302,8 @@ ConcurrentHashMap是HashMap的升级版，HashMap是线程不安全的，而Conc
 - JDK1.7中的扩容是每个Segment内部进行扩容，不会影响其他Segment，而JDK1.8中的扩容和HashMap的扩容类似，只不过支持了多线程扩容，并且保证了线程安全
 
 
-
+>**小贴士：**
+>- **ConcurrentHashMap的 key 是不可以为null的**
 
 
 
