--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -276,12 +276,12 @@ class Dictionary<K,V> {
 }
 ```
 
-所以 **Hashtable 一般是不被推荐使用的。**
+所以 ***Hashtable 一般是不被推荐使用的***
 
 ## 四、ConcurrentHashMap类
 ### 4.1、概述
 
-从JDK1.5开始提供了多种并发容器用来改进同步容器的性能，比如用于替代 Hashtable 的同步容器的ConcurrentHashMap。
+从JDK1.5开始提供了多种并发容器用来改进同步容器的性能，比如用于替代 Hashtable 的同步容器的 ConcurrentHashMap。
 ConcurrentHashMap 严格来说是线程安全版本的 HashMap，被用来替代 Hashtable，它的出现解决了 Hashtable 的一些弊端，比如性能低下，这方面主要体现在 Hashtable 的线程安全是基于 synchronized 关键字，早期的 synchronized 锁属于重量级锁，所以对于 Hashtable 而言，每一次对集合的操作都是串行的，它是会锁住整个 hash 表。
 JDK1.7中的 ConcurrentHashMap 采用一种更加细粒度的 **“分段锁”** 加锁机制，将整张表分成了多个数组（Segment段），然后每个数组元素又是一个HashMap（hash表），加锁级别只在 Segment 段上，Segment继承了乐观锁ReentrantLock，这就意味着不同的 Segment 段是不会锁冲突的，大大提升了并发性能。
 当然了这种方式也有问题，缺点在于分成很多段时会比较浪费内存空间(不连续，碎片化); 操作 Map 时竞争同一个分段锁的概率非常小时，分段锁反而会造成更新等操作的长时间等待; 当某个段很大时，分段锁的性能会下降。
@@ -290,13 +290,6 @@ JDK1.8的实现已经摒弃了 Segment 的概念，或者说弱化了 Segment，
 ### 4.2、与HashMap的区别是什么？
 ConcurrentHashMap是 HashMap 的升级版，HashMap 是线程不安全的，而ConcurrentHashMap是线程安全。
 而其他功能和实现原理和 HashMap 类似，这里就不再赘述了。
-
-这里重点解释一下 sizeCtl 这个属性。可以说它是 ConcurrentHashMap 中出镜率很高的一个属性，因为它是一个控制标识符，在不同的地方有不同用途，而且它的取值不同，也代表不同的含义。
-- 负数代表正在进行初始化或扩容操作
-- -1代表正在初始化
-- -N 表示取-N对应的二进制的低16位数值为M，此时有M-1个线程进行扩容
-- 正数或0代表hash表还没有被初始化，这个数值表示初始化或下一次进行扩容的大小，这一点类似于扩容阈值的概念。
-还后面可以看到，它的值始终是当前ConcurrentHashMap容量的0.75倍，这与loadfactor是对应的。
 
 修改sizeCtl的方法有五个：
 1. initTable()
@@ -316,6 +309,18 @@ ConcurrentHashMap是 HashMap 的升级版，HashMap 是线程不安全的，而C
 - JDK1.7中使用了ReentrantLock，JDK1.8中没有使用ReentrantLock了，而使用了Synchronized
 - JDK1.7中的扩容是每个Segment内部进行扩容，不会影响其他Segment，而JDK1.8中的扩容和HashMap的扩容类似，只不过支持了多线程扩容，并且保证了线程安全
 
+ConcurrentHashMap 在 HashMap 的基础上做了很多多线程方面的改动：
+- 新增 sizeCtl 成员属性。它是一个控制标识符，在不同的地方有不同用途，而且它的取值不同，也代表不同的含义：
+    - 负数代表正在进行初始化或扩容操作
+    - -1代表正在初始化
+    - -N 表示取-N对应的二进制的低16位数值为M，此时有M-1个线程进行扩容
+    - 正数或0代表hash表还没有被初始化，这个数值表示初始化或下一次进行扩容的大小，这一点类似于扩容阈值的概念。
+    还后面可以看到，它的值始终是当前 ConcurrentHashMap 容量的0.75倍，这与loadfactor是对应的。
+- 修改 **volatile** Node<K,V>[] table; 增加了 **volatile** 关键字修饰，保证了可见性和禁止指令重排。
+- 新增 **volatile** Node<K,V>[] nextTable; 在扩容时新生成的数组，其大小为当前table的2倍，用于存放table转移过来的值；
+- 修改 用于存储数据的静态内部类 Node; 值 val 和下一个节点 next 都增加了 **volatile** 关键字
+    -  **volatile** V val;
+    -  **volatile** Node<K,V> next;
 
 >**小贴士：**
 >- **ConcurrentHashMap的 key 是不可以为null的**
