--- a/docs/md/blog/管综/管综数学.md
+++ b/docs/md/blog/管综/管综数学.md
@@ -1,7 +1,21 @@
 
+## 条件充分性判断
+    A：条件（1）充分，但条件（2）不充分。
+    B：条件（2）充分，但条件（1）不充分。
+    C：条件（1）和（2）单独都不充分，但条件（1）和条件（2）联合起来充分。
+    D：条件（1）充分，条件（2）也充分。
+    E：条件（1）和（2）单独都不充分，条件（1）和条件（2）联合起来也不充分。
+
 形如 ABBA，AABB这样的四位数，一定是11的倍数
 
 ### 勾股数：（3，4，5）、（5，12，13）、 (8，15，17)、（7，24，25)、（9，40，41）、（10，24，26）、（12，35，37）
+
+平方差公式：x²y² - 1 = （xy + 1）（xy - 1）
+
+
+
+
+
 
 
 
