--- a/docs/md/blog/管综/管综数学.md
+++ b/docs/md/blog/管综/管综数学.md
@@ -5,6 +5,7 @@
     C：条件（1）和（2）单独都不充分，但条件（1）和条件（2）联合起来充分。
     D：条件（1）充分，条件（2）也充分。
     E：条件（1）和（2）单独都不充分，条件（1）和条件（2）联合起来也不充分。
+A1，B2，C联合，D都行，E都不行
 
 形如 ABBA，AABB这样的四位数，一定是11的倍数
 
