--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -6,12 +6,16 @@
 > 故不积跬步，无以至千里；不积小流，无以成江海！🌻
 
 ### 锁的分类
-
-
-
+1. 从对待竞争的态度来分：乐观锁、悲观锁
+2. 从抢锁的态度来分：公平锁、非公平锁
+3. 从是否可重入来分：可重入锁，不可重入锁
+4. 独享锁、共享锁
+5. 互斥锁、读写锁
+6. synchronized 锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) JDK1.6
 
 ### 内置锁：synchronized
 
+锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) 
 
 
 ### 并发包：juc锁
