--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -14,12 +14,27 @@
 6. synchronized 锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) JDK1.6
 
 ### 内置锁：synchronized
+在Java中，synchronized锁可能是我们最早接触的锁了，在 JDK1.5之前synchronized是一个重量级锁，相对于juc包中的Lock，synchronized显得比较笨重。
+庆幸的是在 JDK1.6 之后 Java 官⽅对从 JVM 层⾯对synchronized进行⼤优化，所以现在的 synchronized 锁效率也优化得很不错。
 
+#### 用法：
+synchronized 关键字加到 static 静态方法和 synchronized(class) 代码块上都是是给 Class 类上锁。
+synchronized 关键字加到实例方法上是给对象实例上锁。
+
+
+#### Java对象结构
+Java对象结构包括三部分：对象头、对象体和填充字节
+
+#### synchronized锁升级：
 锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) 
+
+#### 锁消除和锁粗化：
 
 
 ### 并发包：juc锁
 
+
+### 分布式锁
 
 
 
