--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -24,7 +24,7 @@ synchronized 关键字加到实例方法上是给对象实例上锁。
 #### Java对象结构
 Java对象结构包括三部分：对象头、对象体和填充字节
 java对象结构图：
-![java对象结构图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/HashMap的put方法流程图.png)
+![java对象结构图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/java对象结构.png)
 #### synchronized锁升级：
 锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) 
 
