--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -28,6 +28,9 @@ java对象结构图：
 #### synchronized锁升级：
 锁升级(无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁) 
 
+synchronized锁升级过程：
+![synchronized锁升级](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/synchronized锁升级过程.png)
+
 #### 锁消除和锁粗化：
 
 
