--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -36,19 +36,18 @@ synchronized锁升级过程：
 
 我们知道Java对象是在堆里分配的，在调用栈中，只保存了对象的指针。当对象不再使用后，需要依靠GC来遍历引用树并回收内存，如果对象数量较多，将给GC带来较大压力。因此，减少临时对象在堆内存分配的数量是最有效的优化方法。
 
-
-### 3.1 逃逸分为两种：
+#### 3.1 逃逸分为两种：
 1. 方法逃逸：当一个对象在方法中被定义后，可能作为调用参数被外部方法说引用。
 2. 线程逃逸：通过复制给类变量或者作为实例变量在其他线程中可以被访问到。
 
-### 3.2 逃逸分析相关优化：
+#### 3.2 逃逸分析相关优化：
 如果证明一个对象不会逃逸方法外或者线程外，则可针对此变量进行一下三种优化：
 1. 栈上分配stack allocation：如果对象不会逃逸到方法外，则对此对象在栈上分配内存，则对象所占用的空间可以随栈出栈而别销毁。
 2. 同步消除synchronization Elimination：如果一个对象不会逃逸出线程，则对此变量的同步措施可消除。
 3. Scalar replacement：标量scalar是不可再分解的量，比如基本数据类型，聚合量Aggregate是可以在被分解的，比如java中的对象。标量替换是将一个聚合量拆散，根据程序对此聚合量的访问情况，将其使用到的成员变量恢复到原始变量来访问就是标量替换。
 **逃逸分析如果证明一个对象不会被外部访问，并且此对象可以被拆散，则程序执行时可能不会创建此对象。**
 
-### 3.3 参数开启
+#### 3.3 参数开启
 1. -XX:+DoEscapeAnalysis    开启逃逸分析；
 2. -XX:+EliminateLocks  开启同步消除；
 3. -XX:+EliminateAllocations    开启标量替换；
