--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -34,7 +34,7 @@ synchronized锁升级过程：
 
 ### 三、逃逸分析 Escape Analysis
 
-我们知道Java对象是在堆里分配的，在调用栈中，只保存了对象的指针。当对象不再使用后，需要依靠GC来遍历引用树并回收内存，如果对象数量较多，将给GC带来较大压力。因此，减少临时对象在堆内存分配的数量是最有效的优化方法。
+我们知道Java对象是在堆里分配的，在调用栈中，只保存了对象的指针。当对象不再使用后，需要依靠GC来遍历引用树并回收内存，如果对象数量较多，将给GC带来较大压力。因此，**减少临时对象在堆内存分配的数量是非常有效的优化方法。**
 
 #### 3.1 逃逸分为两种：
 1. 方法逃逸：当一个对象在方法中被定义后，可能作为调用参数被外部方法说引用。
@@ -55,8 +55,41 @@ synchronized锁升级过程：
 
 #### 锁消除和锁粗化：
 
+锁消除:
+锁消除是发生在编译器级别的一种锁优化方式。
+锁消除即删除不必要的加锁操作。JVM在运行时，对一些“在代码上要求同步，但是被检测到不可能存在共享数据竞争情况”的锁进行消除。根据代码逃逸技术，如果判断到一段代码中，堆上的数据不会逃逸出当前线程，那么就可以认为这段代码是线程安全的，无需加锁。
+
+```java
+public String method() {
+    StringBuffer sb = new StringBuffer();
+    for (int i = 0; i < 10; i++) {
+        sb.append("i:" + i);
+    }
+    return sb.toString();
+}
+```
+
+锁粗化:
+假设一系列的连续操作都会对同一个对象反复加锁及解锁，甚至加锁操作是出现在循环体中的，即使没有出现线程竞争，频繁地进行互斥同步操作也会导致不必要的性能损耗。
+如果JVM检测到有一连串零碎的操作都是对同一对象的加锁，将会扩大加锁同步的范围（即锁粗化）到整个操作序列的外部。
+
+```java
+public void doSomethingMethod(){
+    synchronized(lock){
+        //do some thing
+    }
+    //这是还有一些代码，做其它不需要同步的工作，但能很快执行完毕
+    synchronized(lock){
+        //do other thing
+    }
+}
+
+```
 
 ### 四、并发包：juc锁
+
+
+
 
 
 ### 五、分布式锁
