--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -88,9 +88,16 @@ public void doSomethingMethod(){
 
 ### 四、并发包：juc锁
 
-
-
-
+JUC锁机制：
+- 核心接口：Lock，ReadWriteLock；
+- 抽象类
+    - AbstractOwnableSynchronizer （排它锁）；
+    - AbstractQueuedSynchronizer （为实现依赖于先进先出（FIFO）等待队列的阻塞锁和相关同步器（信号量、事件，等等）提供一个框架）；
+    - AbstractQueuedLongSynchronizer （64位同步器） 
+- 工具类：
+    - Reentrantock互斥锁、ReadWriteLock读写锁、Condition控制队列
+    - LockSupport阻塞原语、Semaphore信号量、CountDownLatch闭锁
+    - CyclicBarrier栅栏、Exchanger交换机、CompletableFuture线程回调
 
 ### 五、分布式锁
 
