--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -99,10 +99,65 @@ JUC锁机制：
     - LockSupport阻塞原语、Semaphore信号量、CountDownLatch闭锁
     - CyclicBarrier栅栏、Exchanger交换机、CompletableFuture线程回调
 
-### 五、分布式锁
 
+### 五、volatile 关键字
 
+#### 5.1 主要作用
+volatile 的主要作用有两点： 
+- 保证变量的内存可见性 
+- 禁止指令重排序
 
+#### 5.2 总线嗅探机制
+
+嗅探机制工作原理：每个处理器通过监听在总线上传播的数据来检查自己的缓存值是不是过期了，如果处理器发现自己缓存行对应的内存地址修改，
+就会将当前处理器的缓存行设置**无效状态**，当处理器对这个数据进行修改操作的时候，会**重新**从主内存中把数据读到处理器缓存中。
+
+>**注意：**
+基于 CPU 缓存一致性协议，JVM 实现了 volatile 的可见性，但由于总线嗅探机制，会不断的监听总线，如果大量使用 volatile 会引起**总线风暴**。所以，volatile 的使用要适合具体场景。
+
+#### 5.3 volatile 在单例模式中的应用
+懒汉式单例双重检测模式中就使用到了 **volatile** 关键字
+```java
+
+public class Singleton {
+    // volatile 保证可见性和禁止指令重排序
+    private static volatile Singleton singleton;
+
+    public static Singleton getInstance() {
+        // 第一次检查
+        if (singleton == null) {
+          // 同步代码块
+          synchronized(this.getClass()) {
+              // 第二次检查
+              if (singleton == null) {
+                    // 对象的实例化是一个非原子性操作
+                    singleton = new Singleton();
+                }
+            }
+        }
+        return singleton;
+    }
+}
+
+```
+上面代码中， new Singleton() 是一个非原子性操作，对象实例化分为三步操作：
+（1）分配内存空间，（2）初始化实例，（3）返回内存地址给引用。
+所以，在使用构造器创建对象时，编译器可能会进行指令重排序。
+假设线程 A 在执行创建对象时，（2）和（3）进行了重排序，如果线程 B 在线程 A 执行（3）时拿到了引用地址，
+并在第一个检查中判断 singleton != null 了，但此时线程 B 拿到的不是一个完整的对象，在使用对象进行操作时就会出现问题。
+
+所以，这里使用 **volatile** 修饰 singleton 变量，就是为了禁止在实例化对象时进行**指令重排序**。
+
+### 六、分布式锁
+
+业务数据的补充
+切换的授权
+考虑手动切换和自动切换的冲突的情况
+添加异常的处理流程
+
+可以手动取消现有的定时切换任务
+异常处理方案
+测算的模块
 
 
 
