--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -150,6 +150,14 @@ public class Singleton {
 
 ### 六、分布式锁
 
+#### 6.1 概述
+分布式的 CAP 理论告诉我们:
+任何一个分布式系统都无法同时满足**一致性（Consistency）**、**可用性（Availability）**和**分区容错性（Partition tolerance）**，最多只能同时满足两项。
+
+#### 6.2 什么是分布式锁？
+分布式锁是指分布式环境下，系统部署在多个机器中，实现多进程分布式互斥的一种锁。为了保证多个进程能看到锁，锁被存在公共存储（比如 Redis、Memcache、数据库等三方存储中），以实现多个进程并发访问同一个临界资源，同一时刻只有一个进程可访问共享资源，确保数据的一致性。
+**简言之：分布式锁就是多个JVM之间共享的锁**
+
 业务数据的补充
 切换的授权
 考虑手动切换和自动切换的冲突的情况
@@ -157,7 +165,7 @@ public class Singleton {
 
 可以手动取消现有的定时切换任务
 异常处理方案
-测算的模块
+测算的模块的补充，正式生效之前进行测算
 
 
 
