--- a/docs/md/blog/java/3.1-java锁专题.md
+++ b/docs/md/blog/java/3.1-java锁专题.md
@@ -158,6 +158,49 @@ public class Singleton {
 分布式锁是指分布式环境下，系统部署在多个机器中，实现多进程分布式互斥的一种锁。为了保证多个进程能看到锁，锁被存在公共存储（比如 Redis、Memcache、数据库等三方存储中），以实现多个进程并发访问同一个临界资源，同一时刻只有一个进程可访问共享资源，确保数据的一致性。
 **简言之：分布式锁就是多个JVM之间共享的锁**
 
+#### 6.3 分布式锁一般有如下的特点：
+- 互斥性： 同一时刻只能有一个线程持有锁
+- 可重入性： 同一节点上的同一个线程如果获取了锁之后能够再次获取锁
+- 锁超时：和J.U.C中的锁一样支持锁超时，防止死锁
+- 高性能和高可用： 加锁和解锁需要高效，同时也需要保证高可用，防止分布式锁失效
+- 具备阻塞和非阻塞性：能够及时从阻塞状态中被唤醒
+#### 6.4 基于redis的分布式锁：
+- 指定一个 key 作为锁标记，存入 Redis 中，指定一个唯一的用户标识作为 value
+- 当 key 不存在时才能设置值，确保同一时间只有一个客户端获得锁，满足互斥性特性
+- 设置一个过期时间，防止因系统异常导致没能删除这个 key，满足防死锁特性
+- 当处理完业务之后需要清除这个 key 来释放锁。
+- 清除 key 时需要校验 value 值，需要满足只有加锁的人才能释放锁
+
+**获取锁**
+SET mylock userId NX PX 10000
+
+mylock 为锁对应的 key
+userId 为唯一的用户标识，用于删除时校验
+NX 表示只有当 key 不存在时才能 set 成功，确保只有一个客户端能够请求成功
+PX 10000 表示这个锁有一个10秒的自动过期时间
+
+**释放锁**
+```lua
+if redis.call("get",KEYS[1]) == ARGV[1] then
+    return redis.call("del",KEYS[1])
+else
+    return 0
+end
+```
+执行以上脚本时，需要将mylock作为KEYS[1]传进去，将userId作为ARGV[1]传进去
+
+> **注意点**
+>- 必须要给锁加一个过期时间：这样即使中间系统异常了，等过期时间到了，也可以自动释放锁，防止出现死锁现象
+>- 获取锁时不能分成先设置 key，再设置过期时间两步去执行
+
+
+**缺陷**
+从上面的描述可以看出来，当出现系统阻塞或者网络延迟等情况下，可能业务还没有执行完成，锁就过期自动释放了，
+这时它的业务操作时不受保护的。
+
+#### 6.5 基于 Redisson 实现
+
+
 业务数据的补充
 切换的授权
 考虑手动切换和自动切换的冲突的情况
