--- a/docs/md/other/进程和线程.md
+++ b/docs/md/other/进程和线程.md
@@ -2,8 +2,6 @@
 1. 进程是操作系统分配资源的基本单位
 2. 线程是是CPU调度的最小单位
 
-
-
 #### 进程
 
 进程结构图：
@@ -14,16 +12,18 @@
 - 程序控制块（Program Control Block，PCB）包含进程的描述信息和控制信息，是进程存在的唯一标志
 
 PCB主要由四大部分组成：
-（1）进程的描述信息。主要包含：进程ID和进程名称，进程ID是唯一的，代表进程的身份；进程状态，比如运行、就绪、阻塞；进程优 先级，是进程调度的重要依据。
-（2）进程的调度信息。主要包含：程序起始地址，程序的第一行 指令的内存地址，从这里开始程序的执行；通信信息，进程间通信时的 消息队列。
-（3）进程的资源信息。主要包含：内存信息，内存占用情况和内 存管理所用的数据结构；I/O设备信息，所用的I/O设备编号及相应的数 据结构；文件句柄，所打开文件的信息。
-（4）进程上下文。主要包含：执行时各种CPU寄存器的值、当前程 序计数器（PC）的值以及各种栈的值等，即进程的环境。在操作系统 切换进程时，当前进程被迫让出CPU，当前进程的上下文就保存在PCB 结构中，供下次恢复运行时使用。
+1. 进程的描述信息。主要包含：进程ID和进程名称，进程ID是唯一的，代表进程的身份；进程状态，比如运行、就绪、阻塞；进程优 先级，是进程调度的重要依据。
+2. 进程的调度信息。主要包含：程序起始地址，程序的第一行指令的内存地址，从这里开始程序的执行；通信信息，进程间通信时的 消息队列。
+3. 进程的资源信息。主要包含：内存信息，内存占用情况和内存管理所用的数据结构；I/O设备信息，所用的I/O设备编号及相应的数据结构；文件句柄，所打开文件的信息。
+4. 进程上下文。主要包含：执行时各种CPU寄存器的值、当前程序计数器（PC）的值以及各种栈的值等，即进程的环境。在操作系统切换进程时，当前进程被迫让出CPU，当前进程的上下文就保存在PCB 结构中，供下次恢复运行时使用。
 
-进程是并发执行的，任何进程都可以同其他进程一起执行。在进程内部，代码段和数据段有自己的独立地址空间，不同进程的地址空间是相互隔离的。
+进程是并发执行的，任何进程都可以同其他进程一起执行。
+在进程内部，代码段和数据段有自己的独立地址空间，不同进程的地址空间是相互隔离的。
 
+#### 线程
 
-
-
+线程是指“进程代码段”的一次顺序执行流程。
+一个进程可以有一个或多个线程，各个线程之间共享进程的内存空间、系统资源，进程仍然是操作系统资源分配的最小单位。
 
 
 
