--- a/docs/md/other/进程和线程.md
+++ b/docs/md/other/进程和线程.md
@@ -12,25 +12,36 @@
 - 程序控制块（Program Control Block，PCB）包含进程的描述信息和控制信息，是进程存在的唯一标志
 
 PCB主要由四大部分组成：
-1. 进程的描述信息。主要包含：进程ID和进程名称，进程ID是唯一的，代表进程的身份；进程状态，比如运行、就绪、阻塞；进程优 先级，是进程调度的重要依据。
-2. 进程的调度信息。主要包含：程序起始地址，程序的第一行指令的内存地址，从这里开始程序的执行；通信信息，进程间通信时的 消息队列。
-3. 进程的资源信息。主要包含：内存信息，内存占用情况和内存管理所用的数据结构；I/O设备信息，所用的I/O设备编号及相应的数据结构；文件句柄，所打开文件的信息。
-4. 进程上下文。主要包含：执行时各种CPU寄存器的值、当前程序计数器（PC）的值以及各种栈的值等，即进程的环境。在操作系统切换进程时，当前进程被迫让出CPU，当前进程的上下文就保存在PCB 结构中，供下次恢复运行时使用。
+1. 进程的描述信息。主要包含：进程ID和进程名称，进程ID是唯一的，代表进程的身份；进程状态，比如运行、就绪、阻塞；进程优 先级，是进程调度的重要依据
+2. 进程的调度信息。主要包含：程序起始地址，程序的第一行指令的内存地址，从这里开始程序的执行；通信信息，进程间通信时的 消息队列
+3. 进程的资源信息。主要包含：内存信息，内存占用情况和内存管理所用的数据结构；I/O设备信息，所用的I/O设备编号及相应的数据结构；文件句柄，所打开文件的信息
+4. 进程上下文。主要包含：执行时各种CPU寄存器的值、当前程序计数器（PC）的值以及各种栈的值等，即进程的环境。在操作系统切换进程时，当前进程被迫让出CPU，当前进程的上下文就保存在PCB 结构中，供下次恢复运行时使用
 
 进程是并发执行的，任何进程都可以同其他进程一起执行。
 在进程内部，代码段和数据段有自己的独立地址空间，不同进程的地址空间是相互隔离的。
+
+**进程的状态**
+在一个进程的活动期间至少具备三种基本状态，即运行状态、就绪状态、阻塞状态
+- 运行状态（Runing）：该时刻进程占用 CPU
+- 就绪状态（Ready）：可运行，但因为其他进程正在运行而暂停停止
+- 阻塞状态（Blocked）：该进程正在等待某一事件发生（如等待输入/输出操作的完成）而暂时停止运行，这时，即使给它CPU控制权，它也无法运行
 
 #### 线程
 
 线程是指“进程代码段”的一次顺序执行流程。
 一个进程可以有一个或多个线程，各个线程之间共享进程的内存空间、系统资源，进程仍然是操作系统资源分配的最小单位。
 
+线程结构图：
+![线程的结构图：](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/线程结构图.png)
 
+一个标准的线程主要由三部分组成，即线程描述信息、程序计数器 （Program Counter，PC）和栈内存
 
-
-
-
-
+线程描述信息即线程的基本信息，主要包括： 
+1. 线程ID（Thread ID，线程标识符）。线程的唯一标识，同一 个进程内不同线程的ID不会重叠
+2. 线程名称。主要是方便用户识别，用户可以指定线程的名 字，如果没有指定，系统就会自动分配一个名称
+3. 线程优先级。表示线程调度的优先级，优先级越高，获得 CPU的执行机会就越大
+4. 线程状态。表示当前线程的执行状态，为新建、就绪、运 行、阻塞、结束等状态中的一种
+5. 其他。例如是否为守护线程等，后面会详细介绍
 
 
 
