--- a/docs/md/other/进程和线程.md
+++ b/docs/md/other/进程和线程.md
@@ -21,10 +21,18 @@ PCB主要由四大部分组成：
 在进程内部，代码段和数据段有自己的独立地址空间，不同进程的地址空间是相互隔离的。
 
 **进程的状态**
-在一个进程的活动期间至少具备三种基本状态，即运行状态、就绪状态、阻塞状态
+一个进程的基本状态:
+- 创建状态（new）：进程正在被创建时的状态
 - 运行状态（Runing）：该时刻进程占用 CPU
 - 就绪状态（Ready）：可运行，但因为其他进程正在运行而暂停停止
 - 阻塞状态（Blocked）：该进程正在等待某一事件发生（如等待输入/输出操作的完成）而暂时停止运行，这时，即使给它CPU控制权，它也无法运行
+- 结束状态（Exit）：进程正在从系统中消失时的状态
+
+**进程的上下文切换**
+各个进程之间是共享 CPU 资源的，在不同的时候进程之间需要切换，让不同的进程可以在 CPU 执行，那么这个一个进程切换到另一个进程运行，称为进程的上下文切换。
+
+**进程的上下文切换不仅包含了虚拟内存、栈、全局变量等用户空间的资源，还包括了内核堆栈、寄存器等内核空间的资源。**
+
 
 #### 线程
 
