--- a/docs/md/other/进程和线程.md
+++ b/docs/md/other/进程和线程.md
@@ -2,6 +2,10 @@
 1. 进程是操作系统分配资源的基本单位
 2. 线程是是CPU调度的最小单位
 
+**并发和并⾏有什么区别？**
+并发： 同一时间段，多个任务都在执行 (单位时间内不一定同时执行)；
+并行： 单位时间内，多个任务同时执行。
+
 #### 进程
 
 进程结构图：
