--- a/docs/md/other/网络.md
+++ b/docs/md/other/网络.md
@@ -89,7 +89,7 @@ SSL过程大致如下：
 ### CDN 原理
 
 #### 概述
-CDN 一般包含分发服务系统、负载均衡系统和管理系统
+内容分发网络（Content Delivery Network，CDN）通过将站点内容发布至遍布全球的海量加速节点，使其用户可就近获取所需内容，避免因网络拥堵、跨运营商、跨地域、跨境等因素带来的网络不稳定、访问延迟高等问题，有效提升下载速度、降低响应时间，提供流畅的用户体验。 
 
 #### 为什么需要CDN？
 通常用户满意的网页打开时间是在2秒以下。互联网有一项著名的8秒原则。用户在访问Web网页时
@@ -127,7 +127,8 @@ CDN访问流程：
 
 CDN边缘节点缓存策略因服务商不同而不同，但一般都会遵循http标准协议，通过http响应头中的**Cache-control: max-age**的字段来设置CDN边缘节点数据缓存时间。
 
-当客户端向CDN节点请求数据时，CDN节点会**判断缓存数据是否过期**，若缓存数据并没有过期，则直接将缓存数据返回给客户端；否则，CDN节点就会向源站发出回源请求，从源站拉取最新数据，更新本地缓存，并将**最新数据**返回给客户端。所以，如果我们修改了内容，最好加个版本号，来容CDN**重新获取**资源，从而减少不必要的麻烦，比如 : **app.js?v=20171114 或者 style.css?v=20171114**
+当客户端向CDN节点请求数据时，CDN节点会**判断缓存数据是否过期**，若缓存数据并没有过期，则直接将缓存数据返回给客户端；否则，CDN节点就会向源站发出回源请求，从源站拉取最新数据，更新本地缓存，并将**最新数据**返回给客户端。
+所以，如果我们修改了内容，最好加个版本号，来容CDN**重新获取**资源，从而减少不必要的麻烦，比如 : **app.js?v=20171114 或者 style.css?v=20171114**
 
 #### CDN缓存刷新
 
