--- a/docs/md/blog/network/1-网络.md
+++ b/docs/md/blog/network/1-网络.md
@@ -1,6 +1,6 @@
 ### 概述：网络七层架构
 
-网络OSI模型图：
+**网络OSI模型图：**
 ![网络OSI模型图](https://raw.githubusercontent.com/qinguan1/qinguan1.github.io/main/docs/assets/img/qinguan/网络OSI模型图.png)
 
 七层模型介绍：
@@ -128,7 +128,8 @@ CDN访问流程：
 CDN边缘节点缓存策略因服务商不同而不同，但一般都会遵循http标准协议，通过http响应头中的**Cache-control: max-age**的字段来设置CDN边缘节点数据缓存时间。
 
 当客户端向CDN节点请求数据时，CDN节点会**判断缓存数据是否过期**，若缓存数据并没有过期，则直接将缓存数据返回给客户端；否则，CDN节点就会向源站发出回源请求，从源站拉取最新数据，更新本地缓存，并将**最新数据**返回给客户端。
-所以，如果我们修改了内容，最好加个版本号，来容CDN**重新获取**资源，从而减少不必要的麻烦，比如 : **app.js?v=20171114 或者 style.css?v=20171114**
+所以，如果我们修改了内容，最好加个版本号，来容CDN**重新获取**资源，从而减少不必要的麻烦，
+比如 : **app.js?v=20171114 或者 style.css?v=20171114**
 
 #### CDN缓存刷新
 
