--- a/docs/md/blog/network/1-网络.md
+++ b/docs/md/blog/network/1-网络.md
@@ -16,7 +16,7 @@
 
 #### ✉️ 概述
 TCP/IP 协议不是 TCP 和 IP 这两个协议的合称，而是指因特网整个 TCP/IP 协议族
-从协议分层模型方面来讲，TCP/IP 由四个层次组成：**网络访问层、网络层、传输层、应用层**
+从协议分层模型方面来讲，TCP/IP 由四个层次组成：**网络访问层、网络层、传输层、应用层。**
 
 #### 关于TCP
 - TCP 提供一种面向连接的、可靠的字节流服务
