--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -23,7 +23,7 @@ HashMap结构图：
 
 >**小贴士：**
 >- Java中，TreeMap、TreeSet都使用红黑树作为底层数据结构
->- JDK1.8开始，HashMap也引入了红黑树：当冲突的链表长度超过8时，自动转为红黑树
+>- JDK1.8开始，HashMap也引入了红黑树：当冲突的链表长度超过8且桶的长度超过64时，自动转为红黑树
 >- Linux底层的CFS进程调度算法中，vruntime使用红黑树进行存储。
 >- 多路复用技术的Epoll，其核心结构是红黑树 + 双向链表。
 
@@ -47,10 +47,9 @@ hashMap的put源码：
         // p：表示当前散列表的元素，n：散列表数组的长度，i：寻址的结果
         Node<K,V>[] tab; Node<K,V> p; int n, i;
         // 如果table表未初始化，或者数组长度为0，就会进行扩容操作，并返回扩容后的数组长度
-        // resize()扩容方法会开专题讲解
         if ((tab = table) == null || (n = tab.length) == 0)
             n = (tab = resize()).length;
-        // 通过取模运算（前文详细写道），来获得寻址结果
+        // 通过取模运算，来获得寻址结果
         // 也就是传入的key-value键值对在数组中的存储位置    
         if ((p = tab[i = (n - 1) & hash]) == null)
         	// 如果为null，说明此处还没有存储元素，将key-value包装成Node设置在i处
