--- a/docs/md/blog/network/1-网络.md
+++ b/docs/md/blog/network/1-网络.md
@@ -1,3 +1,10 @@
+## 网络七层架构
+
+作者：qinguan
+<br/>博客：[https://bugstack.cn](https://bugstack.cn)
+
+> 故不积跬步，无以至千里；不积小流，无以成江海！🌻
+
 ### 概述：网络七层架构
 
 **网络OSI模型图：**
