--- a/docs/md/blog/java/2.1-java集合Map专题.md
+++ b/docs/md/blog/java/2.1-java集合Map专题.md
@@ -30,8 +30,7 @@ HashMap结构图：
 ### 2.2 初始化
 
 什么是负载因子（ loadFactor ）？
-我们知道，第一次创建 HashMap 的时候，可以指定其容量（1.7默认容量为16，1.8默认容量为0），那随着我们不断的向 HashMap 
-中 put 元素的时候，就有可能会超过其容量，那么就需要有一个扩容机制。如果元素个数（size）超过临界值（threshold）的时候，就会进行自动扩容（resize），并且，在扩容之后，还需要对 HashMap 中原有元素进行 rehash，即将原来桶中的元素重新分配到新的桶中。
+我们知道，第一次创建 HashMap 的时候，可以指定其容量（1.7默认容量为16，1.8默认容量为0），根据传入的容量值，计算对应的的2次方大小再加1，最终的值作为集合的初始容量。那随着我们不断的向 HashMap 中 put 元素的时候，就有可能会超过其容量，那么就需要有一个扩容机制。如果元素个数（size）超过临界值（threshold）的时候，就会进行自动扩容（resize），并且，在扩容之后，还需要对 HashMap 中原有元素进行 rehash，即将原来桶中的元素重新分配到新的桶中。
 
 **扩容阈值（ threshold ） = 负载因子（ loadFactor ） * 容量（ capacity ）**
 
