同步异步等问题

--- a/docs/md/blog/network/3-同步异步相关.md
+++ b/docs/md/blog/network/3-同步异步相关.md
@@ -29,8 +29,42 @@
 
 阻塞和非阻塞通常用来形容多线程间的相互影响。
 比如一个线程占用了临界区资源，那么其他所有需要这个资源的线程就必须在这个临界区中进行等待。
-等待会导致线程挂起，这种情况就是**阻塞**。
+等待会导致**线程挂起**，这种情况就是**阻塞**。
 此时，如果占用资源的线程一直不愿意释放资源，那么其他所有阻塞在这个临界区上的线程都不能工作。
+
+### 五、死锁、饥饿、活锁
+
+死锁、饥饿和活锁都属于多线程的**活跃性**问题。
+
+#### 1、死锁
+
+死锁是指两个或两个以上的进程在执行过程中，由于**竞争资源或者由于彼此通信**而造成的一种**阻塞**的现象，若无外力作用，它们都将无法推进下去。
+
+产生死锁的四个必要条件：
+- **互斥条件**：一个资源每次只能被一个进程使用。
+- **请求与保持条件**：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+- **不剥夺条件**：进程已获得的资源，在末使用完之前，不能强行剥夺。
+- **循环等待条件**：若干进程之间形成一种头尾相接的循环等待资源关系。
+
+**只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。**
+
+#### 2、饥饿
+
+饥饿是指某一个或者多个线程因为种种原因**无法获得**所需要的资源，导致一直无法执行。
+比如它的线程优先级可能太低，而高优先级的线程不断抢占它需要的资源，导致低优先级线程无法工作。
+
+与死锁相比，饥饿还是有可能在未来一段时间内解决的。
+
+#### 3、活锁
+
+活锁指的是：任务或者执行者**没有被阻塞**，由于某些条件没有满足，导致一直重复尝试，失败，尝试，失败。 
+
+**活锁有可能自行解开，死锁则不能**
+为解决活锁可以引入一些随机性，例如如果检测到冲突，那么就暂停随机的一定时间进行重试。这回大大减少碰撞的可能性。
+典型的例子是以太网的**CSMA/CD检测机制**。
+
+
+
 
 
 
