--- a/docs/md/blog/network/3-同步异步相关.md
+++ b/docs/md/blog/network/3-同步异步相关.md
@@ -62,3 +62,20 @@
 **活锁有可能自行解开，死锁则不能**
 为解决活锁可以引入一些随机性，例如如果检测到冲突，那么就暂停随机的一定时间进行重试。这回大大减少碰撞的可能性。
 典型的例子是以太网的**CSMA/CD检测机制**。
+
+
+
+
+### 六、有关并行的两个重要定律
+
+#### 1、Amdahl定律
+
+Amdahl定律是计算机科学中非常重要的定律。它定义了**串行系统并行化后的加速比的计算公式和理论上限。**
+
+使用多核CPU对系统进行优化，优化的效果取决于CPU的数量以及系统中的串行化程序的比重。CPU数量越多，串行化比重越低，则优化效果越好。仅提高CPU数量而不降低程序的串行化比重，也无法提高系统性能。
+
+#### 2、Gustafson定律
+
+Gustafson 定律阐述了**数据并行带来的影响。**
+从Gustafson定律中，我们可以更容易地发现，如果串行化比例很小，并行化比例很大，那么加速比就是处理器的个数。
+只要你不断地累加处理器，就能获得更快的速度。
